<resources>
    <string name="app_name">AndroidJavaApp</string>
    <string name="hello_world">Hello world</string>
    <string name="GO">Поехали</string>
    <string name="remember">Запомнить</string>
    <string name="do_check">Чекни</string>
    <string name="toggle">Переключалка</string>
    <string name="pushed">НАЖАТА</string>
    <string name="unpushed">ОТЖАТА</string>
    <string name="somethings">Введите хоть что-нибудь</string>
    <string name="simple_text">Просто текст</string>
    <string name="name">ФИО</string>
    <string name="phone">Телефон</string>
    <string name="number">Число</string>
    <string name="text_password">Текстовый пароль</string>
    <string name="email">email адрес</string>
    <string name="time">Время</string>
    <string name="date">Дата</string>
    <string name="clear">CE</string>
    <string name="percent">%</string>
    <string name="delete">D</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="divide">/</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="multiply">*</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="plus_minus">+/-</string>
    <string name="zero">0</string>
    <string name="equal">=</string>
    <string name="dot">.</string>
    <string name="clear_all">C</string>
    <string name="_1">1</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_0">0</string>
    <string name="result_tools_text">123</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="dark_theme">Темная тема</string>
</resources>