<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="20dp"
        android:textSize="52sp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:columnCount="4">

            <Button
                android:id="@+id/btnClearAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clear_all"
                android:textSize="@dimen/text_size_btn" />

            <Button
                android:id="@+id/btnClear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clear"
                android:textSize="@dimen/text_size_btn" />


            <Button
                android:id="@+id/btnPercent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/percent"
                android:textSize="@dimen/text_size_btn" />

            <Button
                android:id="@+id/btnDivide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/divide"
                android:textSize="@dimen/text_size_btn" />

            <Button
                android:id="@+id/btnSeven"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_7"
                android:textSize="@dimen/text_size_btn" />

            <Button
                android:id="@+id/btnEight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_8"
                android:textSize="@dimen/text_size_btn" />

            <Button
                android:id="@+id/btnNine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_9"
                android:textSize="@dimen/text_size_btn" />

            <Button
                android:id="@+id/btnMultiply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/multiply"
                android:textSize="@dimen/text_size_btn" />

            <Button
                android:id="@+id/btnFour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/four"
                android:textSize="@dimen/text_size_btn" />

            <Button
                android:id="@+id/btnFive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/five"
                android:textSize="@dimen/text_size_btn" />

            <Button
                android:id="@+id/btnSix"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/six"
                android:textSize="@dimen/text_size_btn" />

            <Button
                android:id="@+id/btnMinus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minus"
                android:textSize="@dimen/text_size_btn" />

            <Button
                android:id="@+id/btnOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/one"
                android:textSize="@dimen/text_size_btn" />

            <Button
                android:id="@+id/btnTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/two"
                android:textSize="@dimen/text_size_btn" />

            <Button
                android:id="@+id/btnTree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/three"
                android:textSize="@dimen/text_size_btn" />

            <Button
                android:id="@+id/btnPlus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plus"
                android:textSize="@dimen/text_size_btn" />

            <Button
                android:id="@+id/btnPlusMinus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plus_minus"
                android:textSize="@dimen/text_size_btn" />

            <Button
                android:id="@+id/btnZero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                android:textSize="@dimen/text_size_btn" />

            <Button
                android:id="@+id/btnComma"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Comma"
                android:textSize="@dimen/text_size_btn" />

            <Button
                android:id="@+id/btnEqual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/equal"
                android:textSize="@dimen/text_size_btn" />

        </GridLayout>
    </FrameLayout>
</LinearLayout>