<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:gravity="center_vertical|center_horizontal"
    tools:context=".SecondActivity">
    <EditText

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        android:layout_marginVertical="10dp"
        android:inputType="text"
        android:hint="@string/simple_text">
        <requestFocus/>
    </EditText>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        android:layout_marginVertical="10dp"
        android:inputType="textPersonName"
        android:hint="@string/name"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        android:layout_marginVertical="10dp"
        android:inputType="phone"
        android:hint="@string/phone"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        android:layout_marginVertical="10dp"
        android:inputType="number"
        android:hint="@string/number"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        android:layout_marginVertical="10dp"
        android:inputType="textPassword"
        android:hint="@string/text_password"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        android:layout_marginVertical="10dp"
        android:inputType="textEmailAddress"
        android:hint="@string/email"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        android:layout_marginVertical="10dp"
        android:inputType="time"
        android:hint="@string/time"/>

</LinearLayout>